// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CiteAllAction renders with disabled 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={true}
    onClick={[Function]}
    title={
      <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title="Only up to 1000 results can be exported."
      >
        <Button
          disabled={true}
          loading={false}
        >
          <IconText
            icon={<ForwardRef(ExportOutlined) />}
            text="cite all"
          />
        </Button>
      </Tooltip>
    }
  >
    <MenuItem
      key="application/x-bibtex"
    >
      BibTeX
    </MenuItem>
    <MenuItem
      key="application/vnd+inspire.latex.eu+x-latex"
    >
      LaTeX (EU)
    </MenuItem>
    <MenuItem
      key="application/vnd+inspire.latex.us+x-latex"
    >
      LaTeX (US)
    </MenuItem>
    <MenuItem
      key="text/vnd+inspire.html+html"
    >
      CV (html)
    </MenuItem>
  </DropdownMenu>
</UserActionWrapper>
`;

exports[`CiteAllAction renders with less than max citeable records results 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={false}
    onClick={[Function]}
    title={
      <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
      >
        <Button
          disabled={false}
          loading={false}
        >
          <IconText
            icon={<ForwardRef(ExportOutlined) />}
            text="cite all"
          />
        </Button>
      </Tooltip>
    }
  >
    <MenuItem
      key="application/x-bibtex"
    >
      BibTeX
    </MenuItem>
    <MenuItem
      key="application/vnd+inspire.latex.eu+x-latex"
    >
      LaTeX (EU)
    </MenuItem>
    <MenuItem
      key="application/vnd+inspire.latex.us+x-latex"
    >
      LaTeX (US)
    </MenuItem>
    <MenuItem
      key="text/vnd+inspire.html+html"
    >
      CV (html)
    </MenuItem>
  </DropdownMenu>
</UserActionWrapper>
`;

exports[`CiteAllAction renders with loading 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={false}
    onClick={[Function]}
    title={
      <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
      >
        <Button
          disabled={false}
          loading={true}
        >
          <IconText
            icon={<ForwardRef(ExportOutlined) />}
            text="cite all"
          />
        </Button>
      </Tooltip>
    }
  >
    <MenuItem
      key="application/x-bibtex"
    >
      BibTeX
    </MenuItem>
    <MenuItem
      key="application/vnd+inspire.latex.eu+x-latex"
    >
      LaTeX (EU)
    </MenuItem>
    <MenuItem
      key="application/vnd+inspire.latex.us+x-latex"
    >
      LaTeX (US)
    </MenuItem>
    <MenuItem
      key="text/vnd+inspire.html+html"
    >
      CV (html)
    </MenuItem>
  </DropdownMenu>
</UserActionWrapper>
`;
